# VAD-VLM

./: .gitignore  INFO  README.md  build_docker.sh  pyproject.toml  run.sh
docker/docker-cuda11/: env.dockerfile  lwad.dockerfile
docker/docker-cuda12/: env.dockerfile  lwad.dockerfile
docs/: build_docker.md  deepspeed.md  env_install.md  evaluation_metrics.md  scenario_test.md  vad_data.md  viz_tools.md  vlmdatagen.md
lwad/: pre_config.sh  requirements.txt  setup.py
lwad/adbase/vad/: test.py  train.py
lwad/adbase/vad/configs/VAD/: VAD_base_e2e.py  VAD_base_e2e_trainval_4090_1013_lightwheel.py  VAD_base_e2e_trainval_h800.py  VAD_base_e2e_trainval_h800_1013_lightwheel.py  VAD_base_e2e_trainval_h800_1105_modify_cmd.py  VAD_lightwheel_config.py
lwad/ds_config/: hostfile.txt
lwad/mmcv/datasets/pipelines/: loading.py
lwad/mmcv/models/dense_heads/: VADv2_head_ori.py
lwad/mmcv/models/detectors/: VAD.py
lwad/vlannotator/: README.md  __init__.py  data_annotation.py  post_processing.py  utils.py
lwad/vlannotator/api/: __init__.py
lwad/vlannotator/prompt/: SceneAnalysis.py  SceneDescription.py  ScenePrompt.py
tools/: .gitignore  requirements.txt
tools/data_ann/: ann_mapping.ipynb  merge_vlm.py  traj_clustering.py
tools/nuplan/: gpkg2json.py  pickle2sqlite.py  pkl_combiner.py  post_processing.py  raster_navigation.py  vad_nuplan_converter.py
tools/nuplan-devkit/: requirements.txt  requirements_torch.txt
tools/nuplan-devkit/nuplan/database/common/: db.py
tools/nuplan-devkit/nuplan/database/nuplan_db_orm/: models.py
tools/scenario_eval/: convert_map_json.py  scenarios_eval_res_vis.py  split_scene_and_merge.py
tools/vis_tools/: bbox_viz.py  map_viz.py  visualizer.py
vad/: .gitignore
vad/adbase/vad/: test_scenario.py
vad/adbase/vad/apis/: mmdet_train.py  test.py
vad/adbase/vad/configs/VAD/: VAD_base_e2e_dev.py  VAD_base_e2e_mini_4090_fix_command.py  VAD_base_e2e_trainval_4090_lightwheel_canbusvel.py  VAD_base_e2e_trainval_h800_fix_plan_col.py  VAD_lightwheel_config_vadv2.py  VAD_sample_config.py  VADv2_config_voca4096.py
vad/ds_config/: ds_config.json
vad/mmcv/datasets/: nuscenes_vad_dataset.py
vad/mmcv/fileio/handlers/: db_handler.py
vad/mmcv/models/dense_heads/: VADV2_head.py  __init__.py
vad/mmcv/models/detectors/: VADv2.py
vad/mmcv/models/modules/: vqvae.py
vad/mmcv/runner/: epoch_based_runner.py
vad/models/: UniAD.py  VAD.py  __init__.py
vad/vlannotator/: merge_ann2pickle.py
vad/vlannotator/api/: config.py  glm.py  gpt.py  qwen.py
vad/vlannotator/prompt/: HierarchicalPlanning.py  __init__.py
vlm/: README.md  pyproject.toml
